examples/cpp/failing/field_visibility_conflict/Base.cc
class MyClass {
    public:
        int field_1;
}
